# data-engineering-examples

./: README.md
nyc-taxi-etl-pipeline/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
nyc-taxi-etl-pipeline/glue_script/: data_transformation_job.py  utils.py
nyc-taxi-etl-pipeline/infrastructure/: glue_stack.py  s3_stack.py
nyc-taxi-etl-pipeline/lambda_function/: trigger_data_transformation.py
nyc-taxi-etl-pipeline/scripts/: upload_sample_data.py
nyc-taxi-etl-pipeline/tests/unit/: test_taxi_transformations.py
oss-data-platform/: .gitignore  README.md  docker-compose.yml
oss-data-platform/airflow/: Dockerfile
oss-data-platform/dags/: nyc_taxi_etl.py
oss-data-platform/data/: nyc_taxi_sample.csv
oss-data-platform/dbt_project/: dbt_project.yml  profiles.yml
oss-data-platform/dbt_project/models/: mart_daily_revenue.sql  stg_nyc_taxi.sql
oss-data-platform/postgres/: init.sql
oss-data-platform/superset/: Dockerfile
